--- a/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
+++ b/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
@@ -24,7 +24,7 @@
                                             <!-- Button -->
                                             <!-- <li class="button-header margin-left "><a href="#" class="btn">Join</a></li> -->
                                             <li class="button-header"  [routerLink]="['/login']">
-                                                <a  class="btn btn3">{{ 'login' |
+                                                <a  class="btn btn3">{{ 'adminLogin' |
                                                     translate }}</a>
                                             </li>
                                         </ul>
