--- a/src/app/Features/auth/components/login/login.component.html
+++ b/src/app/Features/auth/components/login/login.component.html
@@ -42,16 +42,23 @@
 
 
   <!-- change lang -->
-   
-<div class="lang-box">
-  <ng-container *ngFor="let row of languagesList">
-    <a href="javascript:void(0);" *ngIf="row.langCode !== selectedLanguage.langCode"
-       (click)="changeLanguage(row.langCode!)" class="langStyle">
-      <i class="fas fa-language"></i>&nbsp;{{ row.langName }}
-    </a>
-  </ng-container>
-</div>
 
+  <div class="button-container">
+        <div class="lang-box">
+          <ng-container *ngFor="let row of languagesList">
+            <a href="javascript:void(0);" *ngIf="row.langCode !== selectedLanguage.langCode"
+              (click)="changeLanguage(row.langCode!)" class="langStyle">
+              <i class="fas fa-language"></i>&nbsp;{{ row.langName }}
+            </a>
+          </ng-container>
+        </div>
+
+        <div class="main-page-box">
+        <a class="langStyle" [routerLink]="['/MainPage']">
+              {{ 'homePage' | translate }}
+            </a>
+        </div>
+</div>
 
   <!-- Login Form -->
   <form class="form-default" (ngSubmit)="useLogin()" #f="ngForm" novalidate>
