--- a/src/app/shared/app-template/header/header.component.html
+++ b/src/app/shared/app-template/header/header.component.html
@@ -6,10 +6,14 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <!-- Logo -->
-                        <div class="col-xl-2 col-lg-2"> 
-                            <div class="logo2">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                            </div>
+                         <div class="col-xl-2 col-lg-2"> 
+                           <div class="logo2 app-header">
+                            <a href="index.html">
+                                <img src="assets/img/logo/logo.png" alt="" class="app-logo">
+                            </a>
+                            <h1 class="app-title">{{ 'app-name' | translate }}</h1>
+                           </div>
+
                         </div>
                         <div class="col-xl-10 col-lg-10">
                             <div class="menu-wrapper d-flex align-items-center justify-content-end">
