--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -66,7 +66,8 @@
                 [dataFactory]="courseStudentDataFactory"
                 [apiPath]="'courseStudents'"
                 [selectedId]="selectedCourse?.teacherCoursePk"
-                [searchParameterKey]="'teacherCourseFk'">
+                [searchParameterKey]="'teacherCourseFk'"
+                [isEditableTable]="true">
               </app-generic-table>
           </mat-tab>
         </mat-tab-group>
