--- a/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
+++ b/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
@@ -53,11 +53,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <a [href]="'tel:' + organization.phoneNumber">{{organization.phoneNumber}}</a>
+                  <a [href]="'tel:' + organization.phoneNumber" [dir]="'ltr'">{{organization.phoneNumber}}</a>
                 </li>
                 <li>
                   <i class="fab fa-whatsapp"></i>
-                  <a [href]="'https://wa.me/' + organization.whatsappNumber">{{organization.whatsappNumber}}</a>
+                  <a [href]="'https://wa.me/' + organization.whatsappNumber" [dir]="'ltr'">{{organization.whatsappNumber}}</a>
                 </li>
                 <li>
                   <i class="fa fa-id-card"></i>
