--- a/src/app/shared/components/combobox-search/combobox-search.component.css
+++ b/src/app/shared/components/combobox-search/combobox-search.component.css
@@ -1,11 +1,12 @@
-.combo-shell{
+/* .combo-shell{
   position:relative;
   border:1px solid #ddd;
   border-radius:6px;
   background:#fff;
   overflow:hidden;            
   box-sizing:border-box;
-}
+  width: 100%;
+} */
 
 .combo-shell.input-error{
   border-color:#dc3545 !important;
@@ -36,7 +37,8 @@
   transform:translateY(-50%);
   pointer-events:none;
   font-size:12px;
-  color:#666;
+  /* color: var(hal(--bg)); */
+  /* padding: 2px; */
 }
 
 
