--- a/src/app/Features/home/components/main-page/home.component.html
+++ b/src/app/Features/home/components/main-page/home.component.html
@@ -1,10 +1,30 @@
 <app-slider></app-slider>
+<div class="accordion-container">
+<app-custom-accordion title="Home.CenterStats">
+<div class="grid-2x2">
+<app-monthly-financial-transactions #monthlyFinancialTransactions></app-monthly-financial-transactions>
+<app-daily-class-summary #dailyClassSummary></app-daily-class-summary>
+</div>
+</app-custom-accordion>
+</div>
+
+<app-classes-timeline-by-teacher #classesTimeline></app-classes-timeline-by-teacher>
+<app-team></app-team>
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <app-services></app-services> -->
 <!-- <app-courses></app-courses> -->
 <!-- <app-about-section1></app-about-section1> -->
 <!-- <app-topics></app-topics> -->
 <!-- <app-about-section2></app-about-section2> -->
-<app-center-statistics></app-center-statistics>
-<app-classes-timeline-by-teacher></app-classes-timeline-by-teacher>
-<app-team></app-team>
 <!-- <app-about-section3></app-about-section3> -->
