--- a/public/assets/css/animated-headline.css
+++ b/public/assets/css/animated-headline.css
@@ -35,6 +35,7 @@ a {
 }
 @media only screen and (min-width: 768px) {
   .cd-title {
+    padding-top: 150px;
     line-height: 250px;
   }
 }
@@ -59,21 +60,42 @@ a {
 }
 @media only screen and (min-width: 768px) {
   .cd-intro {
+    padding-top: 150px;
     margin: 5em auto;
   }
 }
 @media only screen and (min-width: 1170px) {
   .cd-intro {
+    padding-top: 150px;
     margin: 6em auto;
   }
 }
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+    .slider-height {
+        min-height: 650px;
+        padding-top: 150px;
 
+    }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .slider-height {
+        min-height: 650px;
+        padding-top: 150px;
+    }
+}
+@media (max-width: 575px) {
+    .slider-height {
+        padding-top: 150px;
+        min-height: 600px;
+    }
+}
 .cd-headline {
   font-size: 3rem;
   line-height: 1.2;
 }
 @media only screen and (min-width: 768px) {
   .cd-headline {
+    padding-top: 150px;
     font-size: 4.4rem;
     font-weight: 300;
   }
