--- a/src/app/shared/components/combobox-search/combobox-search.component.html
+++ b/src/app/shared/components/combobox-search/combobox-search.component.html
@@ -19,5 +19,5 @@
     </option>
   </select>
   <!-- optional chevron -->
-  <span class="chevron" aria-hidden="true">▾</span>
+  <!-- <span class="chevron" aria-hidden="true">▾</span> -->
 </div>
