--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -58,7 +58,7 @@
                 (rowSelected)="onClassSelected($event)">
               </app-generic-table>
           </mat-tab>
-          <mat-tab label='{{"CourseStudent.Students" | translate}}' >
+          <mat-tab label='{{"TeacherCourse.students" | translate}}' >
               <app-generic-table
                 [screenId]="'courses'" 
                 [primaryKey]="'courseStudentPk'"
