--- a/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
+++ b/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
@@ -1,45 +1,37 @@
 <header>
-    <!-- Header Start -->
-    <div class="header-area header-transparent">
-        <div class="main-header ">
-            <div class="header-bottom  header-sticky">
-                <div class="container-fluid">
-                    <div class="row align-items-center">
-                        <!-- Logo -->
-                        <div class="col-xl-2 col-lg-2"> 
-                           <div class="logo2 app-header">
-                            <a href="index.html">
-                                <img src="assets/img/logo/logo.png" alt="" class="app-logo">
-                            </a>
-                            <h1 class="app-title">{{ 'app-name' | translate }}</h1>
-                           </div>
+  <div class="header-area header-transparent">
+    <div class="main-header">
+      <div class="header-bottom header-sticky">
+        <div class="container-fluid">
+          <div class="row align-items-center header-row">
 
-                        </div>
-                        <div class="col-xl-10 col-lg-10">
-                            <div class="menu-wrapper d-flex align-items-center justify-content-end">
-                                <!-- Main-menu -->
-                                <div class="main-menu d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <!-- Button -->
-                                            <!-- <li class="button-header margin-left "><a href="#" class="btn">Join</a></li> -->
-                                            <li class="button-header"  (click)="goToLogin($event)">
-                                                <a  class="btn btn3">{{ 'adminLogin' |
-                                                    translate }}</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Mobile Menu -->
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
-                        </div>
-                    </div>
-                </div>
+            <!-- Logo + Title (يمين) -->
+            <div class="app-header">
+              <a href="index.html">
+                <img src="assets/img/logo/logo.png" alt="" class="app-logo">
+              </a>
+              <h1 class="app-title">{{ 'app-name' | translate }}</h1>
             </div>
+
+            <!-- Main-menu (اختياري) -->
+            <div class="main-menu">
+              <nav>
+                <ul id="navigation">
+                  <!-- روابط إضافية إن وجدت -->
+                </ul>
+              </nav>
+            </div>
+
+            <!-- Login (مثبّت أقصى الشمال) -->
+            <div class="login-container">
+              <button class="btn btn3" (click)="goToLogin($event)">
+                {{ 'adminLogin' | translate }}
+              </button>
+            </div>
+
+          </div>
         </div>
+      </div>
     </div>
-    <!-- Header End -->
+  </div>
 </header>
