--- a/public/assets/css/table-style.css
+++ b/public/assets/css/table-style.css
@@ -109,6 +109,7 @@
 
 .header-container {
   display: flex;
+  min-width: 150px;
   flex-direction: column;
   align-items: center;
   padding: 2px;
